--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ version = "0.0.1"
 description = "text agent"
 dependencies = [
     "anthropic",
+    "textwrap",
     "python-dotenv",
     "jericho",
     "ruff",
